--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	
 	<!--Favicon-->
-	<link rel="shortcut icon" href="{{ "/img/XPR.png" | prepend: site.baseurl }}" type="image/x-icon">
+	<link rel="shortcut icon" href="{{ "/img/XDV.png" | prepend: site.baseurl }}" type="image/x-icon">
 	
 	<!-- Canonical -->
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
